--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -43,15 +43,15 @@
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 stats-col">
                                     <div class="stats-value pink">{{ user.owned_cases.all|length }}</div>
-                                    <div class="stats-title">Case opened</div>
+                                    <div class="stats-title">Open Cases</div>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 stats-col">
                                     <div class="stats-value pink">{{ user.owned_images.all|length }}</div>
-                                    <div class="stats-title">My analyses</div>
+                                    <div class="stats-title">Analyses</div>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 stats-col">
                                     <div class="stats-value pink">{{ user.owned_hashes.all|length }}</div>
-                                    <div class="stats-title">My hash lists</div>
+                                    <div class="stats-title">Hash Lists</div>
                                 </div>
                             </div>
                             <div class="row">
